--- a/src/frontend/scripts/shared/calendar/calendar.component.scss
+++ b/src/frontend/scripts/shared/calendar/calendar.component.scss
@@ -26,6 +26,7 @@
 #header #prev, #header #next {
   font-size: 40px;
   width: 40px;
+  height: 60px;
   text-align: center;
   background: none;
   color: #4272b7;
